--- a/ahorah/index.html
+++ b/ahorah/index.html
@@ -75,17 +75,17 @@
                 <img src="img/logo.png" class="col-6 col-lg-3 p-0 mb-4 mb-lg-5 d-block animate__animated animate__zoomIn" data-wow-delay="0.3s" alt="A HORA H" />
 
                 <h1 class="mb-4 mb-lg-5">
-                    <div class="animate__animated animate__fadeInLeft" data-wow-delay="0.7s">O <strong>maior evento</strong></div>
-                    <div class="animate__animated animate__fadeInLeft" data-wow-delay="1.5s">de <strong>alta performance</strong></div>
-                    <div class="animate__animated animate__fadeInLeft" data-wow-delay="2.3s">do Brasil</div>
+                    <div class="animate__animated animate__fadeInLeft" data-wow-delay="0.5s">O <strong>maior evento</strong></div>
+                    <div class="animate__animated animate__fadeInLeft" data-wow-delay="0.8s">de <strong>alta performance</strong></div>
+                    <div class="animate__animated animate__fadeInLeft" data-wow-delay="1.1s">do Brasil</div>
                 </h1>
 
-                <h3 class="mb-4 mb-lg-5 font-monospace lh-sm animate__animated animate__fadeInLeft" data-wow-delay="2.7s"">
+                <h3 class="mb-4 mb-lg-5 font-monospace lh-sm animate__animated animate__fadeInLeft" data-wow-delay="1s">
                     06 e 07 de agosto<br />
                     <i class="fas fa-map-marker-alt me-1 me-lg-2"></i>Santos, SP
                 </h3>
 
-                <a href="https://hotm.art/AHORAH2022" class="btn btn-lg btn-roxo px-3 px-lg-4 rounded-pill animate__animated animate__flipInX" data-wow-delay="3s">INSCREVA-SE</a>
+                <a href="https://hotm.art/AHORAH2022" class="btn btn-lg btn-roxo px-3 px-lg-4 rounded-pill animate__animated animate__flipInX" data-wow-delay="1s">INSCREVA-SE</a>
 
             </div>
 
